--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "sqlalchemy>=1.4, <1.5",
     "alembic>=1.7.4, <1.8",
     "requests>=2.22.0, <3",
-    "psutil>=5.4.8, <6"
+    "psutil>=5.4.8, <6",
+    "tqdm>=4.67.1",
 ]
 
 [project.optional-dependencies]
